[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preferences-engine"
version = "0.1.0"
description = "DICE-inspired AI-powered engine for inferring user preferences"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery",
    "django",
    "pydantic",
    "django-ninja",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
bedrock = ["anthropic[bedrock]>=0.20"]
all = ["openai>=1.0", "anthropic[bedrock]>=0.20"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["preferences_engine*"]
